Leave dialog if return is pressed in amount field

BUG: 431294
FIXED-IN: 5.1.2

(cherry picked from commit 5f8ca7607fc1a24bd4308d2d2612cf3663f36771)